# detectMarked

./: CMakeLists.txt
MainWindow/: CMakeLists.txt  main.cpp  qDetectMarked.cpp  qDetectMarked.h
MainWindow/Resources/: detectMarked.rc
MainWindow/Resources/UI/: qDetectMarked.ui
Widgets/: CMakeLists.txt  qMarkedInfs.cpp  qMarkedInfs.h  qMarkedLabels.cpp  qMarkedLabels.h  qMarkedViewer.cpp  qMarkedViewer.h  qMarkedWidget.cpp  qMarkedWidget.h
Widgets/Resources/UI/: qMarkedWidget.ui
